--- a/Javascript/04-object/03-extra-object-syntax.html
+++ b/Javascript/04-object/03-extra-object-syntax.html
@@ -65,9 +65,9 @@
     // 위 세 문장을 하나로 만들 때
     // const { firstName, userId, email } = userInfo
 
-    // const { firstName } = userInfo
+    const { firstName } = userInfo
     // const { firstName, userId } = userInfo
-    const { firstName, userId, email } = userInfo
+    // const { firstName, userId, email } = userInfo
 
     // Alice alice123 alice123@gmail.com
     console.log(firstName, userId, email)
