--- a/Javascript/03-functions/01-function.html
+++ b/Javascript/03-functions/01-function.html
@@ -24,18 +24,17 @@
     console.log(sub(3, 9))
 
     // 기본 함수 매개변수
-    const greeting = function (name = 'Hello') {
-      return `Hi ${name}`
-    }
+    // const greeting = function (name = 'Anonymous') {
+    //   return `Hi ${name}`
+    // }
 
     console.log(greeting())
 
 
     // 나머지 매개변수 (가변 인자)
-    // 나머지 매개 변수는 배열로 담겨서 리턴된다.
-    const myFunc = function (num1, num2, ...restArgs) {
-      return [num1, num2, restArgs]
-    }
+    // const myFunc = function (num1, num2, ...restArgs) {
+    //   return [num1, num2, restArgs]
+    // }
 
     console.log(myFunc(1, 2, 3, 4, 5))
     console.log(myFunc(1, 2))
@@ -53,10 +52,9 @@
 
 
     // 매개변수 개수 < 인자 개수
-    // 초과 입력한 인자는 사용하지 않음.
-    const noArgs = function () {
-      return 0
-    }
+    // const noArgs = function () {
+    //   return 0
+    // }
 
     console.log(noArgs(1, 2, 3))
 
